--- a/app/src/main/res/layout/activity_post_overview.xml
+++ b/app/src/main/res/layout/activity_post_overview.xml
@@ -20,6 +20,18 @@
         android:textColor="@color/white"
         android:fontFamily="@font/robotoblack"
         />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:background="#30ffffff"
+        android:layout_margin="20dp"
+
+        >
+
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -55,6 +67,8 @@
         android:textSize="24sp"
         android:layout_margin="20dp"
         android:textColor="@color/white"/>
+
+    </LinearLayout>
     
     <Button
         android:layout_width="match_parent"
